--- a/dados.ipynb
+++ b/dados.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esperamos trabalhar no diretório c:\\Users\\m_gab\\OneDrive\\Área de Trabalho\\Insper\\2 semestre\\Cdados\\P2\\Projeto_2_Cdados\n"
+      "Esperamos trabalhar no diretório c:\\Users\\Joao\\Projeto_2_Cdados\n"
      ]
     }
    ],
@@ -86,6 +86,18 @@
     "\n",
     "\n",
     "- Nosso Projeto 2 de Cdados será baseado em analise/previsão do gênero musical de uma determinada pessoa. Essa 'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros. A descrição do nosso problema é baseado em uma pessoa não saber o seu estilo musical dessa maneira com a construção do nosso projeto dois, conseguiremos fazer uma previsão em qual estimo musical determinada pessoa está mais inserida.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"imagens/tela1.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"1400\" height=\"700\" />\n",
     "___\n",
     "\n",
     "# Contextualização\n",
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +291,7 @@
        "6    0.230  Electronic  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +409,7 @@
        "Electronic          4032"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +431,8 @@
     "Na análise exploratória, nosso objetivo é descobrir quais variáveis são significantes para a predição, para isso usamos o boxplot para visualizar os dados e com isso tirar conclusoes sobre quais variáveis são importantes para a predição, e quais não são.\n",
     "- Primeiro vamos explicar como o boxplot é utilizado para visualizar os dados, O gráfico de box-plot foi criado pelo estatístico John Tukey há quase 50 anos, e é usado até hoje nos dando uma clareza da distribuição dos dados numéricos, resumidos em cinco números: mínimo, primeiro quartil, mediana, terceiro quartil, e máximo. Esses valores são calculados ordenando primeiramente a amostra do menor para o maior. ~É uma ferramenta gráfica que permite visualizar a distribuição e valores discrepantes (outliers) dos dados, fornecendo assim um meio complementar para desenvolver uma perspectiva sobre o caráter dos dados. Além disso, o boxplot também é uma disposição gráfica comparativa. Observe a figura do boxplot. Note que o local onde a haste vertical começa (de baixo para cima) indica o mínimo (excetuando algum possível valor extremo ou outlier) e, onde a haste termina indica o máximo (também excetuando algum possível outlier).\n",
     "\n",
-    "![title](imagens/boxplot.png)\n",
+    "<img src=\"imagens/boxplot.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"1000\" height=\"700\" />\n",
     "\n",
     "\n",
     "\n",
@@ -458,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1087,12 +1100,39 @@
    "metadata": {},
    "source": [
     "# **Primeiro Modelo:** Random Forest Regression\n",
-    "- Random Forest é um algoritmo de aprendizagem supervisionada que se baseia no método de aprendizagem em conjunto e em muitas árvores de decisão. Random Forest é uma técnica de Bagging, então todos os cálculos são executados em paralelo e não há interação entre as Árvores de Decisão ao construí-las. Dessa forma, pode ser usado para resolver tarefas de classificação e regressão."
+    "\n",
+    "<img src=\"imagens/random_forest.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"1400\" height=\"700\" />\n",
+    "\n",
+    "\n",
+    "A Random Forest é um algoritmo de aprendizado supervisionado . A “floresta” que constrói é um conjunto de árvores de decisão, normalmente treinadas com o método de “ensacamento”. A ideia geral do método de bagging é que uma combinação de modelos de aprendizagem aumenta o resultado geral.\n",
+    "\n",
+    "**Simplificando: a floresta aleatória constrói várias árvores de decisão e as mescla para obter uma previsão mais precisa e estável.**\n",
+    "\n",
+    "Uma grande vantagem da floresta aleatória é que ela pode ser usada para problemas de classificação e regressão, que constituem a maioria dos sistemas de aprendizado de máquina atuais. Vejamos a floresta aleatória na classificação, já que a classificação às vezes é considerada o bloco de construção do aprendizado de máquina. Abaixo você pode ver como uma floresta aleatória ficaria com duas árvores:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"imagens/two.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"800\" height=\"400\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "A floresta aleatória tem quase os mesmos hiperparâmetros que uma árvore de decisão ou um classificador de bagging. Felizmente, não há necessidade de combinar uma árvore de decisão com um classificador de bagging porque você pode usar facilmente a classe classificadora de floresta aleatória. Com a floresta aleatória, você também pode lidar com tarefas de regressão usando o regressor do algoritmo.\n",
+    "\n",
+    "A floresta aleatória adiciona aleatoriedade adicional ao modelo, enquanto as árvores crescem. Em vez de procurar o recurso mais importante ao dividir um nó, ele procura o melhor recurso entre um subconjunto aleatório de recursos. Isso resulta em uma grande diversidade que geralmente resulta em um modelo melhor.\n",
+    "\n",
+    "Portanto, na floresta aleatória, apenas um subconjunto aleatório dos recursos é levado em consideração pelo algoritmo para dividir um nó. Você pode até mesmo tornar as árvores mais aleatórias, usando adicionalmente limites aleatórios para cada recurso, em vez de pesquisar os melhores limites possíveis (como faz uma árvore de decisão normal)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1186,7 @@
        "RandomForestRegressor(n_estimators=200, n_jobs=-1, random_state=42)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1254,7 @@
        "<AxesSubplot:title={'center':'Matriz de confusão'}>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1243,19 +1283,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Segundo Modelo:** Decision Tree"
+    "# **Segundo Modelo:** Decision Tree\n",
+    "<img src=\"imagens/decision_tree.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"1400\" height=\"700\" />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Uma árvore de decisão (Decision Tree) é uma estrutura semelhante a um fluxograma em que cada nó interno representa um \"teste\" em um atributo (por exemplo, se um cara ou coroa dá cara ou coroa), cada ramo representa o resultado do teste, e cada nó folha representa um rótulo de classe (decisão tomada após calcular todos os atributos). Os caminhos da raiz à folha representam as regras de classificação."
+    "- Uma árvore de decisão (Decision Tree) é uma estrutura semelhante a um fluxograma em que cada nó interno representa um \"teste\" em um atributo (por exemplo, se um cara ou coroa dá cara ou coroa), cada ramo representa o resultado do teste, e cada nó folha representa um rótulo de classe (decisão tomada após calcular todos os atributos). Os caminhos da raiz à folha representam as regras de classificação.\n",
+    "\n",
+    "-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"imagens/treeex.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"1200\" height=\"700\" />\n",
+    "\n",
+    "\n",
+    "As árvores de decisão classificam os exemplos classificando-os na árvore da raiz até algum nó folha / terminal, com o nó folha / terminal fornecendo a classificação do exemplo.\n",
+    "\n",
+    "Cada nó na árvore atua como um caso de teste para algum atributo, e cada aresta descendente do nó corresponde às respostas possíveis para o caso de teste. Esse processo é recursivo por natureza e é repetido para cada subárvore com raiz no novo nó.\n",
+    "\n",
+    "\n",
+    "## **Medidas de seleção de atributos**\n",
+    " \n",
+    "Se o conjunto de dados consistir em  N  atributos, então decidir qual atributo colocar na raiz ou em diferentes níveis da árvore como nós internos é uma etapa complicada. Selecionar aleatoriamente qualquer nó para ser a raiz não pode resolver o problema. Se seguirmos uma abordagem aleatória, isso pode nos dar resultados ruins com baixa precisão.\n",
+    "\n",
+    "Para resolver esse problema de seleção de atributos, os pesquisadores trabalharam e criaram algumas soluções. Eles sugeriram o uso de alguns  critérios  como:\n",
+    "\n",
+    "- Entropia\n",
+    "- ganho de informação\n",
+    "- índice de Gini\n",
+    "- razão de ganho\n",
+    "- redução na variância\n",
+    "- qui-quadrado\n",
+    "\n",
+    "Esses critérios calcularão os valores para cada atributo. Os valores são classificados e os atributos são colocados na árvore seguindo a ordem, ou seja, o atributo com um valor alto (no caso de ganho de informação) é colocado na raiz.\n",
+    "Ao usar o ganho de informação como critério, assumimos que os atributos são categóricos e, para o índice de Gini, os atributos são considerados contínuos.\n",
+    "\n",
+    "\n",
+    "## **Entropia** (Metodo que ultilizamos)\n",
+    " \n",
+    "Entropia é uma medida da aleatoriedade nas informações que estão sendo processadas. Quanto maior a entropia, mais difícil é tirar qualquer conclusão dessa informação. Jogar uma moeda é um exemplo de ação que fornece informações aleatórias.\n",
+    "\n",
+    "<img src=\"imagens/entro.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"600\" height=\"500\" />\n",
+    "\n",
+    "A partir do gráfico acima, é bastante evidente que a entropia H (X) é zero quando a probabilidade é 0 ou 1. A entropia é máxima quando a probabilidade é 0,5 porque projeta aleatoriedade perfeita nos dados e não há chance se determinar perfeitamente o resultado.\n",
+    "\n",
+    "A entropia matemática para 1 atributo é representada como:\n",
+    "\n",
+    "<img src=\"imagens/calculo.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"600\" height=\"500\" />\n",
+    "\n",
+    "\n",
+    " - Onde  S → Estado atual e Pi → Probabilidade de um evento  i  do estado S ou Porcentagem da classe  i  em um nó do estado S.\n",
+    "\n",
+    "A entropia matematicamente para vários atributos é representada como:\n",
+    "\n",
+    "<img src=\"imagens/calculo2.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"600\" height=\"500\" />\n",
+    "\n",
+    "onde  T → Estado atual e X → atributo selecionado\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1359,8 +1459,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Referência Bibliográfica "
+    "## Referência Bibliográfica \n",
+    "- https://operdata.com.br/blog/como-interpretar-um-boxplot/\n",
+    "- https://builtin.com/data-science/random-forest-algorithm\n",
+    "- https://www.kdnuggets.com/2020/01/decision-tree-algorithm-explained.html\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
