--- a/dados.ipynb
+++ b/dados.ipynb
@@ -84,6 +84,8 @@
     "\n",
     "# Introdução\n",
     "\n",
+    "#### Pergunta a ser respondida em nosso projeto:\n",
+    "\n",
     "\n",
     "- Nosso Projeto 2 de Cdados será baseado em analise/previsão do gênero musical de uma determinada pessoa. Essa 'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros. A descrição do nosso problema é baseado em uma pessoa não saber o seu estilo musical dessa maneira com a construção do nosso projeto dois, conseguiremos fazer uma previsão em qual estimo musical determinada pessoa está mais inserida.\n",
     "\n",
@@ -1093,7 +1095,9 @@
    "source": [
     "##  Conclusão após a Análise Exploratória \n",
     "\n",
-    "-\n",
+    "\n",
+    "\n",
+    "Com tudo, podemos notar que praticamente todos os gráficos/boxplots mostram uma relação de 'fora da curva' para alguns gêneros, e as vezes para todos os gêneros, isso pode ser um indicador de que o banco de dados não está completo ou não está adequado para a análise. Ou seja, o banco de dados está muito inviezado e não temos uma boa representação de todos os gêneros. Na parte do mapa de calor, podemos ver que algumas variáveis estão muito correlacionadas, como loudness e energy, logo apresentam um grau forte de dependência. E outras variáveis ,como acousticness e loudness, apresentam uma correlação muito fraca, apresentando um grau forte de independência. Tais conclusões, podem nos ajudar na hora de construirmos os modelos e enterdemos os resultados obtidos.\n",
     "___"
    ]
   },
@@ -1633,7 +1637,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusão"
+    "## Conclusão\n",
+    "\n",
+    "- Com o decorrer do Projeto 2, concluímos que a base de dados escolhida para a analise não foi de fato muito boa para que conseguissemos obter os melhores resultados. Percebemos que os dados estavam enviesado como denominado em Machine Learning está em 'Outlier', dessa forma a maioria dos nossos dados estão fora da curva e dificultou que nossas porcentagens na hora de prever fosse um pouco baixa.\n",
+    "- Em relação a nossa pergunta realizada no início do Projeto, mesmo com as dificuldades presentes em nosso banco de dados conseguimos prever a maioria dos gêneros musicais que foram proposto, talvez não com as porcentagens de desejamos ao inicio do nosso projeto.\n",
+    "- Para finalizar iremos comparar duas tecnicas utilizadas no projeto que são Decision Tree e Random Forest Regression \n",
+    "\n",
+    " \n"
    ]
   },
   {
