--- a/dados.ipynb
+++ b/dados.ipynb
@@ -1654,18 +1654,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'DecisionTreeClassifier' has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-35-eb15dd45a421>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmodels\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mval_scores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mnome_modelo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;31m# somente para exibição\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     print('Modelo: {} | Média: {:.2} | Desvio: {:.2}'.format(nome_modelo,\n\u001b[0;32m      7\u001b[0m                                     np.mean(val_scores), np.std(val_scores)))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'DecisionTreeClassifier' has no attribute 'name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Média: 0.43 | Desvio: 0.0057\n",
+      "| Média: 0.35 | Desvio: 0.0071\n",
+      "| Média: 0.036 | Desvio: 0.0015\n"
      ]
     }
    ],
@@ -1684,6 +1682,9 @@
    "metadata": {},
    "source": [
     "## Conclusão\n",
+    "\n",
+    "<img src=\"imagens/conclusao.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"700\" height=\"500\" />\n",
     "\n",
     "- Com o decorrer do Projeto 2, concluímos que a base de dados escolhida para a analise não foi de fato muito boa para que conseguissemos obter os melhores resultados. Percebemos que os dados estavam enviesado como denominado em Machine Learning está em 'Outlier', dessa forma a maioria dos nossos dados estão fora da curva e dificultou que nossas porcentagens na hora de prever fosse um pouco baixa.\n",
     "- Em relação a nossa pergunta realizada no início do Projeto, mesmo com as dificuldades presentes em nosso banco de dados conseguimos prever a maioria dos gêneros musicais que foram proposto, talvez não com as porcentagens de desejamos ao inicio do nosso projeto.\n",
