--- a/dados.ipynb
+++ b/dados.ipynb
@@ -1649,34 +1649,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validação Cruzada \n"
+    "## Validação Cruzada \n",
+    "Validação Cruzada(cross validation – CV) é talvez a técnica mais utilizada para selecionar os melhores modelos de um conjunto de modelos ou ainda para “tunar” os hiperparâmetros de um modelo já escolhido. Essa popularidade se deve principalmente ao fato de resolver o problema da variância do conjunto de validação, produzindo uma avaliação mais robusta do modelo.\n",
+    "\n",
+    "Ao executar a validação cruzada é produzido um conjunto de medidas de performance que podem ser sumarizadas em uma só, sendo esse valor final uma medida de performance mais robusta do que simplesmente avaliar o modelo uma única vez. Esse processo resulta em uma diminuição do viés que pode haver em um único conjunto de validação e nos aproxima de obtermos o modelo que generalizará bem para dados nunca vistos.\n",
+    "\n",
+    "\n",
+    "<img src=\"imagens/cross.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"600\" height=\"500\" />\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Validação Cruzada de um único modelo com k=5\n",
+    "Com CV temos k medidas de performance, uma para cada conjunto de validação, podemos sumarizar essas medidas em uma única medida, por exemplo calculando a média dos erros. Agora além de termos uma média de performance mais robusta para um modelo temos também algo que não se consegue com a abordagem hold-out, podemos calcular o desvio padrão do erro do modelo no conjunto de validação.\n",
+    "\n",
+    "Analisar a variância do erro de validação de um modelo pode ser útil em situações em que nossa prioridade não é ter um modelo que possui altíssima acurácia em algumas instâncias específicas e que pode errar feio em outras, mas sim um modelo que possui uma acurácia razoável que se mantém na maior parte das instâncias, ou seja, menor variância. Se você já estudou a questão especificidade x sensibilidade pode imaginar situações onde um modelo assim seria preferível.\n",
+    "\n",
+    "## Comparando Modelos\n",
+    "Até agora buscamos produzir uma medida de erro mais robusta para um único modelo, porém é comum utilizar a validação cruzada para selecionar um dentre diversos modelos. A única pequena adaptação é que ao invés de executar a validação cruzada uma única vez, executamos uma CV para cada modelo e comparamos seus erros médios, eventualmente escolhendo o melhor deles como modelo final.\n",
+    "\n",
+    "<img src=\"imagens/cross2.png\" alt=\"inicio\"\n",
+    "\ttitle=\"tela\" width=\"600\" height=\"500\" />\n",
+    "\n",
+    "\n",
+    "**Validação Cruzada para comparar Múltiplos Modelos**\n",
+    "Perceba que o conjunto reservado para teste foi usado uma única vez no final do algorítmo após selecionarmos o melhor modelo. É importante ajustar os hiperparâmetros de um modelo(ou comparar dois modelos diferentes) somente com base na performance de validação e nunca com base no conjunto de teste, pois assim estaríamos contaminando o modelo com a informação de teste, tendo por final uma medida de generalização muito mais otimista que a real capacidade do modelo escolhido. Esse é um erro comum de vazamento de dados (Data Leakage) que ocorre com iniciantes na área.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'DecisionTreeClassifier' has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-35-eb15dd45a421>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmodels\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mval_scores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mnome_modelo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;31m# somente para exibição\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     print('Modelo: {} | Média: {:.2} | Desvio: {:.2}'.format(nome_modelo,\n\u001b[0;32m      7\u001b[0m                                     np.mean(val_scores), np.std(val_scores)))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'DecisionTreeClassifier' has no attribute 'name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo DecisionTreeClassifier| Média: 0.43 | Desvio: 0.006\n",
+      "Modelo KNeighborsClassifier| Média: 0.036 | Desvio: 0.0015\n",
+      "Modelo RandomForestRegressor| Média: 0.35 | Desvio: 0.0059\n"
      ]
     }
    ],
    "source": [
-    "models = [DecisionTreeClassifier(),RandomForestRegressor(),KNeighborsClassifier()]\n",
+    "models = [DecisionTreeClassifier(),KNeighborsClassifier(),RandomForestRegressor()]\n",
     "models_scores = []\n",
     "for model in models:\n",
     "    val_scores = cross_val_score(model, train_features, train_labels, cv=5)\n",
-    "\n",
-    "    print('| Média: {:.2} | Desvio: {:.2}'.format(\n",
-    "                                    np.mean(val_scores), np.std(val_scores)))"
+    "    model_name = model.__class__.__name__\n",
+    "    print('Modelo {}| Média: {:.2} | Desvio: {:.2}'.format(model_name,np.mean(val_scores), np.std(val_scores)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Anlise da validação Cruzuda\n",
+    "- Como podemos notar o decision tree e o Random Forest são melhores que o KNN, pois são mais precisos assim como é possivel notar que as medias entre eles varia pouco e o desvio padrão varia bem pouco entre os 3 modelos de classificação."
    ]
   },
   {
@@ -1700,7 +1730,8 @@
     "## Referência Bibliográfica \n",
     "- https://operdata.com.br/blog/como-interpretar-um-boxplot/\n",
     "- https://builtin.com/data-science/random-forest-algorithm\n",
-    "- https://www.kdnuggets.com/2020/01/decision-tree-algorithm-explained.html\n"
+    "- https://www.kdnuggets.com/2020/01/decision-tree-algorithm-explained.html\n",
+    "- https://dataml.com.br/validacao-cruzada-aninhada-com-scikit-learn/\n"
    ]
   },
   {
