Análise da matriz de confusão

--- a/dados.ipynb
+++ b/dados.ipynb
@@ -1301,7 +1301,7 @@
    "metadata": {},
    "source": [
     "# Analise da Matriz de confusão:\n",
-    "- "
+    "- A partir da matriz de confusão, podemos que notar que o modelo confunde a variável 2 e 3. Logo, o que pode acontecer é que o modelo quando vai classificar o 2, ele classifica como 3 e vice-versa. O que torna um problema na hora da classificação.  "
    ]
   },
   {
