--- a/dados.ipynb
+++ b/dados.ipynb
@@ -1742,8 +1742,9 @@
     "## Conclusão\n",
     "\n",
     "- Com o decorrer do Projeto 2, concluímos que a base de dados escolhida para a analise não foi de fato muito boa para que conseguissemos obter os melhores resultados. Percebemos que os dados estavam enviesado como denominado em Machine Learning está em 'Outlier', dessa forma a maioria dos nossos dados estão fora da curva e dificultou que nossas porcentagens na hora de prever fosse um pouco baixa.\n",
+    "- De todas as técnicas utilizadas, o modelo \"Decision Tree\" apresentou a melhor média de acurácia, de acordo com a validação cruzada, e o \"KNN\" apresentou a média mais baixa.\n",
     "- Em relação a nossa pergunta realizada no início do Projeto, mesmo com as dificuldades presentes em nosso banco de dados conseguimos prever a maioria dos gêneros musicais que foram proposto, talvez não com as porcentagens de desejamos ao inicio do nosso projeto.\n",
-    "- Para finalizar iremos comparar duas tecnicas utilizadas no projeto que são Decision Tree e Random Forest Regression \n",
+    " \n",
     "\n",
     " \n"
    ]
