--- a/dados.ipynb
+++ b/dados.ipynb
@@ -85,10 +85,10 @@
     "\n",
     "# Introdução\n",
     "\n",
-    "#### Pergunta a ser respondida em nosso projeto:\n",
+    "### Pergunta a ser respondida em nosso projeto:\n",
+    "#### Conseguimos fazer uma previsão em qual estilo musical determinada pessoa está mais inserida, de acordo com suas as características musicais ?\n",
     "\n",
-    "\n",
-    "- Nosso Projeto 2 de Cdados será baseado em analise/previsão do gênero musical de uma determinada pessoa. Essa 'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros. A descrição do nosso problema é baseado em uma pessoa não saber o seu estilo musical dessa maneira com a construção do nosso projeto dois, conseguiremos fazer uma previsão em qual estimo musical determinada pessoa está mais inserida.\n",
+    "- Nosso Projeto 2 de Cdados será baseado em analise/previsão do gênero musical de uma determinada pessoa. Essa 'previsão' terá como parâmetros informações como 'nome do artista', 'instrumentalidade', 'energia' e entre outros. A descrição do nosso problema é baseado em uma pessoa não saber o seu estilo musical dessa maneira com a construção do nosso projeto dois, conseguiremos fazer uma previsão em qual estilo musical determinada pessoa está mais inserida.\n",
     "\n",
     "\n",
     "\n",
