--- a/dados.ipynb
+++ b/dados.ipynb
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1660,12 +1660,10 @@
     "\n",
     "Ao executar a validação cruzada é produzido um conjunto de medidas de performance que podem ser sumarizadas em uma só, sendo esse valor final uma medida de performance mais robusta do que simplesmente avaliar o modelo uma única vez. Esse processo resulta em uma diminuição do viés que pode haver em um único conjunto de validação e nos aproxima de obtermos o modelo que generalizará bem para dados nunca vistos.\n",
     "\n",
-    "\n",
+    "<div align=\"center\">\n",
     "<img src=\"imagens/cross.png\" alt=\"inicio\"\n",
     "\ttitle=\"tela\" width=\"600\" height=\"500\" />\n",
-    "\n",
-    "\n",
-    "\n",
+    "</div>\n",
     "\n",
     "Validação Cruzada de um único modelo com k=5\n",
     "Com CV temos k medidas de performance, uma para cada conjunto de validação, podemos sumarizar essas medidas em uma única medida, por exemplo calculando a média dos erros. Agora além de termos uma média de performance mais robusta para um modelo temos também algo que não se consegue com a abordagem hold-out, podemos calcular o desvio padrão do erro do modelo no conjunto de validação.\n",
